<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_card_recycler_profile"
    android:layout_height="@dimen/height_card_recycler_profile"
    android:layout_marginEnd="@dimen/sz20"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/sz10"
            android:layout_marginTop="@dimen/sz10"
            android:layout_marginEnd="@dimen/sz10"
            android:background="@color/white_smoke"
            android:text="@string/recommendatios"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sz10"
            android:layout_marginTop="@dimen/sz5"
            android:text="@string/ratings"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sz10"
            android:text="@string/amount"
            android:textColor="@color/black" />
    </LinearLayout>


</androidx.cardview.widget.CardView>