<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/imdb"
        android:textSize="45sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/boxUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_box"
        android:layout_marginEnd="@dimen/margin_box"
        android:autofillHints=""
        android:background="@drawable/box_user_info"
        android:hint="@string/user"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey"
        android:minHeight="@dimen/min_height_box"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/boxPassWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_box"
        android:layout_marginEnd="@dimen/margin_box"
        android:autofillHints=""
        android:background="@drawable/box_user_info"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_height_box"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxUser"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="LabelFor,TextFields,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/ForgetPassWord"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxPassWord"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_box"
        android:layout_marginEnd="@dimen/margin_box"
        android:background="@drawable/buttons"
        android:hint="@string/login"
        android:minHeight="@dimen/min_height_box"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxPassWord"
        app:layout_constraintVertical_bias="0.150"
        tools:ignore="MissingConstraints,UnknownId,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/otherLogin"
        app:layout_constraintBottom_toTopOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="MissingConstraints,UnknownId,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/img1"
        android:layout_width="@dimen/margin_box"
        android:layout_height="@dimen/margin_box"
        android:layout_marginStart="@dimen/margin_icon"
        android:layout_marginEnd="@dimen/margin_icon_text"
        android:background="@drawable/border_icon_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/img2"
        android:layout_width="@dimen/margin_box"
        android:layout_height="@dimen/margin_box"
        android:layout_marginEnd="@dimen/margin_icon_text"
        android:background="@drawable/border_icon_fb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.463"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/img3"
        android:layout_width="@dimen/margin_box"
        android:layout_height="@dimen/margin_box"
        android:layout_marginEnd="@dimen/margin_icon"
        android:background="@drawable/border_icon_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.462"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/notAccount"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>